<resources>
    <string name="app_name">StudLink Driver</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_key">AIzaSyB3jtlhqjB5ZAcQpgIZ583I-hTqJ8xb4I0</string>
    <string name="action_settings">Message</string>
    <string name="Vehiclename">Vehicle Name</string>
    <string name="make"> Make and Model</string>
    <string name="purchase"> Purchase Date</string>
    <string name="saledate"> Sale Date</string>
    <string name="pp"> Purchase Price</string>
    <string name="sp"> Sale Price</string>
    <string name="lpn"> License Plate Number</string>
    <string name="desc"> Description</string>
    <string name="submit"> Submit</string>
    <string name="delivery_complete">Delivery Completed</string>
    <string name="complete_delivery">Complete Delivery</string>
    <string name="vin"> Vin Number</string>
    <string name="carmilage">Beginning Car Odometer</string>
    <string name="oil">Beginning Oil % </string>
    <string name="oilend">Ending Oil % </string>
    <string name="nooffarmtodrop">Number Of Farm To Drop</string>
    <string name="onofbegs">No. of quantity to Upload</string>
    <string name="miles">Miles To Drive</string>
    <string name="save">Save</string>
    <string name="start">Start</string>

    <string name="offline">You are offline. Farm list is unavailable. Your completed deliveries are saved and will sync automatically when you are back online.</string>
    <string name="location_pop_up_title">Allow to access this device\'s  location?</string>
    <string name="location_pop_up_description">This allow us to capture location of your daily in time and out time through the attendance application. It will help HR/admin to track whether you were in office premises or out in field or working from home.</string>
    <string name="not_now">NOT NOW</string>
    <string name="continue_now">CONTINUE</string>

    <string name="internet_error">Internet not available</string>
    <string name="proceed">Proceed</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="choose_pan">Choose PAN Image</string>
    <string name="error_pan">Some error occurred while uploading</string>
    <string name="ipsm">Using the Design support library to display a bottom sheet is both versatile and simple. They can be used to display details or pickers without getting in the way, as well as act as a great replacement for the DialogFragment in the proper situation. Understanding how the bottom sheet can be used in your app will give you an additional tool to make great apps.</string>
    <string name="simentemp">Semen Temperature</string>
    <string name="simentemp_onload">Product Details</string>
    <string name="simentemp_offload">Product Details</string>
 <!--   <string name="simentemp_onload">Temperature On-Load</string>
    <string name="simentemp_offload">Temperature Off-Load</string>-->
    <string name="bagno">No. Of Bags</string>
    <string name="comment">Comment</string>
    <!--<string name="onloading">Temperature of semen on loading</string>
    <string name="offloading">Temperature of semen off loading</string>-->
    <string name="onloading">Product Temperature</string>
    <string name="offloading">Product Temperature</string>
    <string name="onloadingref">Temperature of refrigerator on loading</string>
    <string name="offloadingref">Temperature of refrigerator off loading</string>
    <string name="tempref">Temperature of refrigerator </string>
<!--    <string name="atdelivery">Temperature of semen at delivery</string>-->
    <string name="atdelivery">Temperature of semen at delivery</string>
    <string name="storage">Temperature of semen on farm storage</string>
    <string name="farm">Farm</string>
    <string name="semenbags">Product Quantity</string>
    <string name="semenbagsdel">Product Quantity</string>
<!--    <string name="semenbags">No. of Semen quantity to Delivered</string>-->
<!--    <string name="semenbagsdel">No. of Semen quantity Delivered</string>-->
    <string name="unloadingtemp">Unloading Temperature</string>
    <string name="unloadbags">No. of bags Unloaded</string>
    <string name="coolertemp">Customer semen cooler temperature</string>
    <string name="datetime">24-01-2018, 05:15:00</string>
    <string name="endingcaroad">Ending Car Odometer</string>
    <string name="totalmilex">Total Miles</string>
    <string name="next">NEXT</string>
    <string name="done">Done</string>
    <string name="finish">Finish </string>
    <string name="finishride">Finish Ride</string>
    <string name="title_activity_maps2">Map</string>
    <string name="alert_for_back">You can not go back, Untill you finish or cancel the ride.</string>
    <string name="navigate">Do you want navigation on route ?</string>
    <string name="ride_alert">Ride Alert!</string>
    <string name="no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="pause_ride">Do you want to pause the ride ?</string>
    <string name="resume_ride">Do you want to resume the ride ?</string>
    <string name="image_one">Front</string>
    <string name="image_two">Back</string>
    <string name="image_three">Left</string>
    <string name="image_four">Right</string>
    <string name="farm_name">Farm Name</string>
    <string name="office_phone">Office Phone</string>
    <string name="emergency_mobile">Emergency Contact</string>
    <string name="emergency_mobile_alternate">Alternate Contact</string>
    <string name="address">Address</string>
    <string name="Instruction">Instructions</string>
    <string name="image">Farm Image</string>
    <string name="dropimage">Drop Location Image</string>
    <string name="pause">Pause</string>
    <string name="end">End</string>
    <string name="resume">Resume</string>
    <string name="end_route">End Route</string>
    <string name="image_1">Image one</string>
    <string name="image_2">Image two</string>
    <string name="misc1">Misc one</string>
    <string name="misc2">Misc two</string>
    <string name="misc3">Misc three</string>
    <string name="misc4">Misc four</string>
    <string name="logged_out">Your ride has ended and you have been logged out of the app.</string>
    <string name="package1">Package one</string>
    <string name="package2">Package</string>
    <string name="uploadphotos"><u>Upload Photos</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="receipt">Receipt</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="view_receipt">View Receipt</string>
    <string name="uploadphoto">Upload Photo</string>
    <string-array name="farms">
        <item>Farm advance</item>
        <item>Farm kellen</item>
        <item>Farm Aip</item>
        <item>farm dur</item>
        <item>farm abc</item>
    </string-array>
</resources>
