<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/end_layout">

    <TextView
        android:id="@+id/dialogtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/simentemp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/onloadingtemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unloadingtemp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1">
            <EditText
                android:id="@+id/semencoolertempA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Onloading Temperature"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/noofbagsunloaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unloadbags"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/noofbagsunloadedA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No. of Bags Loaded"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">

        <EditText
            android:id="@+id/semencoolertemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coolertemp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">

        <EditText
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start"
            android:hint="@string/comment"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="24dp"
        android:background="@color/orange"
        android:padding="12dp"
        android:text="@string/delivery_complete"
        android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
