<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:clickable="false"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_20dp">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/txt_pause_resume"
                android:layout_marginLeft="40dp"
                android:layout_centerVertical="true"
                android:layout_marginTop="40dp"
                android:background="@color/orange"
                android:text="@string/dialog_yes"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/txt_pause_resume"
                android:layout_marginLeft="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_40dp"
                android:layout_marginTop="40dp"
                android:background="@color/orange"
                android:text="@string/no"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txt_farmName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_gravity="center"
                android:text="@string/ride_alert"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@color/orange"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_farmName">





            </RelativeLayout>

            <TextView
                android:id="@+id/txt_pause_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_40dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>