<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:id="@+id/ll_listRoute"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_12dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:gravity="center_vertical"
            android:text="Cancel Ride"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDate"
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_offline_mode"
            android:text="Enable Offline Mode"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"/>
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:visibility="gone"
            android:src="@drawable/ic_refresh"
            android:id="@+id/refresh"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchOfflineMode"
            android:layout_toRightOf="@+id/tv_offline_mode"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:padding="@dimen/_6dp"
        android:visibility="gone"
        android:id="@+id/tv_offline"
        android:layout_marginLeft="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        android:text="@string/offline"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+ Add Receipt"
        android:padding="@dimen/_8sdp"
        android:visibility="gone"
        android:background="@color/orange"
        android:id="@+id/tv_add_rcpt"
        android:layout_margin="@dimen/margin_16dp"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewreceipt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_weight=".5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_5dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/endRoute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:padding="10dp"

            android:text="@string/finishride"
            android:textColor="@color/white"
            android:visibility="gone" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:background="@color/orange"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/bgTrasnparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#80000000"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/cl_largeImage"
        android:visibility="gone"
        app:layout_goneMarginTop="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/iv_largeview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_close"
            android:contentDescription="Close" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>